--- a/Ejemplo/nbproject/project.properties
+++ b/Ejemplo/nbproject/project.properties
@@ -33,9 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Ejemplo
 excludes=
+file.reference.commons-lang3-3.11-javadoc.jar=lib\\commons-lang3-3.11-javadoc.jar
+file.reference.commons-lang3-3.11.jar=lib\\commons-lang3-3.11.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.commons-lang3-3.11.jar}:\
+    ${file.reference.commons-lang3-3.11-javadoc.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
